samples/_failures_safe/1761643418_dc5656_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44d67e9e.c:2:2: error: expected ‘;’ before ‘typedef’
    2 | c
      |  ^
      |  ;
./samples/SAFE/__tmp_44d67e9e.c:174: error: expected ‘;’, ‘,’ or ‘)’ at end of input
